--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,19 @@
+# Copyright 2021 Free TON Wallet Team
+
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+
+# 	http://www.apache.org/licenses/LICENSE-2.0
+
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 name: freeton_wallet
-description: A new Flutter project.
+description: Free TON Wallet
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -23,6 +37,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  freemework: ^0.0.1
+  freemework_cancellation: ^0.0.2
 
 dev_dependencies:
   flutter_test:
@@ -40,9 +56,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/freeton-128.png
+    - assets/freeton-256.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
