--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,15 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: "0.0.0"
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  freemework: ^0.0.1
-  freemework_cancellation: ^0.0.2
+  freemework: ^0.1.1
+  freemework_cancellation: ^0.1.1
+  js: ^0.6.3
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
