--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,13 @@ environment:
   sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
+  convert: ^3.0.0
   flutter:
     sdk: flutter
   freemework: ^0.1.1
   freemework_cancellation: ^0.1.1
   js: ^0.6.3
+  pointycastle: ^3.0.1-nullsafety
   provider: ^5.0.0
 
 dev_dependencies:
