--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 image:
-  name: docker.registry.zxteam.net/pub/docker/devel/flutter/snapshot:master
-  entrypoint: [""]
+  name: docker.registry.zxteam.net/pub/docker/devel/flutter/snapshot:master.e9a0666
+  # entrypoint: [""]
 
 stages:
   - build
