--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   js: ^0.6.3
   pointycastle: ^3.0.1-nullsafety
   provider: ^5.0.0
+  flutter_markdown: ^0.6.2
+  url_launcher: ^6.0.4
 
 dev_dependencies:
   flutter_test:
