--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   provider: ^5.0.0
   flutter_markdown: ^0.6.2
   url_launcher: ^6.0.4
+  http: ^0.13.3
+  fl_chart: ^0.36.1
 
 dev_dependencies:
   flutter_test:
