--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   url_launcher: ^6.0.4
   http: ^0.13.3
   fl_chart: ^0.36.1
+  decimal: ^1.1.0
 
 dev_dependencies:
   flutter_test:
