--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   http: ^0.13.3
   fl_chart: ^0.36.1
   decimal: ^1.1.0
+  material_color_picker_wns: ^1.0.8
 
 dev_dependencies:
   flutter_test:
