--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "submodule/ton-client-web-js-umd-facade"]
-	path = submodule/ton-client-web-js-umd-facade
-	url = ../ton-client-web-js-umd-facade.git
+[submodule "submodule/wallet.platform.web"]
+	path = submodule/wallet.platform.web
+	url = ../wallet.platform.web.git
