--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   http: ^0.13.3
   fl_chart: ^0.36.1
   decimal: ^1.1.0
+  pedantic: ^1.11.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,8 @@ flutter:
   assets:
     - assets/freeton-128.png
     - assets/freeton-256.png
+    - assets/ton-crystal.png
+    - assets/ton-rubie.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
