Add extention build notes

--- a/web/manifest-extension.json
+++ b/web/manifest-extension.json
@@ -1,7 +1,7 @@
 {
-	"name": "Free TON Wallet",
+	"name": "Free TON Wallet (For Developers)",
 	"version": "0.1.0.0",
-	"description": "A Free TON Wallet was created by #137 Contest",
+	"description": "Free TON Wallet is the open source wallet with the most users",
 	"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
 	"browser_action": {
 		"default_popup": "index.html",
