--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: "0.1.0"
+version: "0.1.1"
 
 environment:
   sdk: ">=2.12.0-0 <3.0.0"
@@ -67,10 +67,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/freeton-128.png
-    - assets/freeton-256.png
-    - assets/ton-crystal.png
-    - assets/ton-rubie.png
+    - resources/freeton-128.png
+    - resources/freeton-256.png
+    - resources/ton-crystal.png
+    - resources/ton-rubie.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
